--- a/01-base.html
+++ b/01-base.html
@@ -25,7 +25,7 @@
           <p>애플리케이션 설치 초기 단계에서 이용 방법에 대한 안내,
             애플리케이션 사용을 위한 로그인 및 회원가입, 서비스의 사용 환경에 대한 설정,
             서비스 이용약관 및 문의 등의 페이지는 모든 서비스에서 공통적으로 나타나는 가장 기본적인 화면들이다.</p>
-          <a href="about.html" class="text-muted">활용 방법 →</a>
+          <a href="about.html" class="text-muted bold">활용 방법 →</a>
         </div>
         <div class="col-12 col-md-8">
           <div class="row m-3 justify-content-center">
